Added new unit and integration tests in microservices and tariffs in telegram bot